kubernetes/apps/nextcloud/app/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-http-route
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
spec:
  parentRefs:
    - name: kube-gateway
  hostnames:
    - cloud.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: nextcloud-aio-apache
          port: 8443
