kubernetes/apps/nextcloud/app/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    cert-manager.io/common-name: cloud.${CLUSTER_DOMAIN}
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
  name: nextcloud
spec:
  ingressClassName: nginx
  rules:
    - host: cloud.${CLUSTER_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: nextcloud-aio-apache
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - cloud.${CLUSTER_DOMAIN}
      secretName: cloud-tls
