kubernetes/apps/nextcloud/app/base/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: nextcloud-tcp-route
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
spec:
  parentRefs:
    - name: kube-gateway-gateway
      sectionName: foo
  rules:
    - backendRefs:
        - name: nextcloud-aio-talk
          port: 3478
